<resources>
    <string name="app_name">DoorWay</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="price_tag"> تومان</string>
    <string name="try_again">تلاش دوباره</string>
    <string name="about_text">برنامه ای برای خرید و فروش بدون واسطه ی آنلاین\nارتباط با ما: fouladiyas@gmail.com</string>
    <string name="no_internet">لطفا اینترنت خود را متصل و دوباره تلاش کنید</string>
    <string name="network_failure">خطا در ارتباط با سرور، درحال تلاش دوباره...</string>
    <string name="data_error">خطا در دریافت داده ها</string>
    <string name="network_failure_try">خطا در ارتباط با سرور، لطف دوباره تلاش کنید</string>
    <string name="lorem">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
    <string name="police_alert">هشدار پلیس: لطفا پیش از انجام معامله و هرنوع پرداخت وجه، از صحت کالا یا خدمات ارائه شده، به صورت حضوری اطمینان حاصل نمایید.</string>
    <string name="ad_sent">آگهی شما پس از بررسی و تایید شدن قرار میگیرد</string>
    <string name="tv_city">شهر:</string>
    <string name="tv_select_pic_title">انتخاب تصویر مناسب آگهی</string>
    <string name="tv_select_pic_sub">آگهی های شامل تصویر بیش از ۵ برابر دیده میشوند</string>
    <string name="hint_ad_title">عنوان آگهی</string>
    <string name="hint_ad_description">توضیحات آگهی</string>
    <string name="hint_ad_price">قیمت (تومان)</string>
    <string name="tv_post_ad_consent">با ثبت آگهی در DoorWay شما شرایط و قوانین آن را پذیرفته اید</string>
    <string name="btn_post_ad_text">ثبت آگهی</string>
    <string name="hint_ad_category">دسته</string>
    <string name="btn_call_title">تماس</string>
    <string name="btn_send_sms_title">ارسال پیامک</string>
    <string name="tv_welcome">خوش آمدید</string>
    <string name="tv_welcome_sub">برای ادامه دادن وارد شوید</string>
    <string name="hint_username">نام کاربری</string>
    <string name="hint_password">رمز عبور</string>
    <string name="tv_forgot_password">فراموشی رمز عبور؟</string>
    <string name="btn_login_title">ورود</string>
    <string name="tv_new_user">کاربر جدید؟</string>
    <string name="tv_btn_sign_up">ثبت نام</string>
    <string name="hint_search">جستجو</string>
    <string name="tv_no_result_found">نتیجه ای پیدا نشد</string>
    <string name="tv_put_keyword">سعی کنید کلمه های کلیدی وارد کنید</string>
    <string name="tv_signup_welcome">لطفا اطلاعات خود را وارد و روی ثبت نام کلیک کنید</string>
    <string name="hint_full_name">نام کامل</string>
    <string name="hint_email">ایمیل</string>
    <string name="hint_phone_number">شماره موبایل</string>
    <string name="hint_retype_password">رمز عبور دوباره</string>
    <string name="btn_sign_up_title">ثبت نام</string>
    <string name="tv_did_you_sign_up_already">ثبت نام کرده اید؟</string>
    <string name="tv_btn_login">ورود</string>
    <string name="tv_btn_see_our_website">مشاهده وبسایت ما</string>
    <string name="ad_sent_successfully">آگهی با موفقیت ارسال شد</string>
    <string name="tv_my_ads">آگهی های من</string>
    <string name="tv_general">عمومی</string>
    <string name="tv_your_desc">مشخصات شما</string>
    <string name="tv_full_name">نام کامل:</string>
    <string name="btn_log_out">خروج از حساب</string>
    <string name="tv_user_name">نام کاربری:</string>
    <string name="tv_email">ایمیل:</string>
    <string name="tv_my_city">شهر من:</string>
    <string name="tv_privacy_policy">پشتیبانی و قوانین</string>
    <string name="tv_about_us">درباره ما</string>
    <string name="btn_recover_password">بازیابی رمز عبور</string>
    <string name="rules">شرایط ثبت آگهی در «DoorWay» چیست؟\nبه منظور بهبود تجربه‌ی کاربری، شرایط زیر برای ثبت آگهی در «DoorWay» وضع شده‌اند. رعایت این موارد، علاوه بر افزایش رضایت کاربران، منجر به اثربخشی هرچه بیشتر آگهی‌ها نیز می‌گردد.\n● آگهی منتشر شده به مدت یک ماه بر روی «DoorWay» باقی می‌ماند و در صورت عدم تمدید، آگهی منقضی شده و از روی «DoorWay» پاک می‌شود.\n● در صورت حذف آگهی، پس از گذشت ۲۴ ساعت از حذف، امکان ثبت آگهی مشابه فراهم می‌گردد.\n● هر کاربر مجاز به ثبت حداکثر سه آگهی در روز می‌باشد.\n● هر آگهی تنها در یک شهر قابل انتشار است.\n● پس از ثبت و انتشار آگهی، امکان ویرایش اطلاعات تماس مانند ایمیل و شماره تماس و همچنین دسته‌بندی آگهی و شهر وجود ندارد.\n</string>
</resources>
