<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layoutDirection="rtl"
              tools:context=".acticities.SignUpActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/signUpToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/Toolbar.Light" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_10" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">



        <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

            <RelativeLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_xlarge"
            >


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/applogoone"
                            android:tint="@color/blue_grey_800"
                            android:layout_gravity="center" android:layout_marginBottom="30dp"/>
                    <TextView
                            android:id="@+id/tvSignUp"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:text="@string/tv_signup_welcome" android:textSize="18sp"
                            android:textColor="@android:color/black" android:textAlignment="center"
                            android:layout_marginBottom="30dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/signUpTilFullName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintAnimationEnabled="true"
                            app:hintEnabled="true"
                            android:hint="@string/hint_full_name">

                        <EditText
                                android:importantForAutofill="noExcludeDescendants"
                                android:id="@+id/edSignUpFullName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:maxLength="30"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/signUpTilUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintAnimationEnabled="true"
                            app:hintEnabled="true"
                            android:hint="@string/hint_username">

                        <EditText
                                android:id="@+id/edSignUpUsername"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:maxLength="20"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/signUpTilEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintAnimationEnabled="true"
                            app:hintEnabled="true"
                            android:hint="@string/hint_email">

                        <EditText
                                android:id="@+id/edSignUpEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLength="50"
                                android:gravity="right"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/signUpTilPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintAnimationEnabled="true"
                            app:hintEnabled="true"
                            android:hint="@string/hint_phone_number">

                        <EditText
                                android:id="@+id/edSignUpPhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLength="15"
                                android:gravity="right"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/signUpTilPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintAnimationEnabled="true"
                            app:hintEnabled="true"
                            android:hint="@string/hint_password">

                        <EditText
                                android:id="@+id/edSignUpPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:maxLength="50"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/signUpTilRePassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintAnimationEnabled="true"
                            app:hintEnabled="true"
                            android:hint="@string/hint_retype_password">

                        <EditText
                                android:id="@+id/edSignUpRePassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLength="50"
                                android:gravity="right"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                            android:id="@+id/btnSignUpGo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_large"
                            android:background="@drawable/btn_purple_a400"
                            android:text="@string/btn_sign_up_title"
                            android:textColor="@android:color/white"/>
                    <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_medium" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:gravity="center"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_did_you_sign_up_already"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/blue_grey_300" />

                        <TextView
                                android:id="@+id/btnSignUpLogin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:text="@string/tv_btn_login"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>