<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@android:color/white"
              android:orientation="vertical"
              android:layoutDirection="rtl"
              tools:context=".acticities.LoginActivity">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/signUpToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/Toolbar.Light" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_10" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/applogoone"
                    android:tint="@color/blue_grey_800" />

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/tv_welcome"
                    android:textSize="20sp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/blue_grey_800"
                    android:textStyle="bold" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/tv_welcome_sub"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/blue_grey_300"
                    android:textStyle="bold" />

            <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />





            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edUsernameLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_900"
                    android:theme="@style/Widget.AppCompat.EditText"/>
            </com.google.android.material.textfield.TextInputLayout>


            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />




            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    android:hint="@string/hint_password">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/blue_grey_900"
                    android:theme="@style/Widget.AppCompat.EditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

            <TextView
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|end"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:clickable="true"
                    android:text="@string/tv_forgot_password"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/blue_grey_400"
                    android:textStyle="bold" />

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_purple_a400"
                    android:text="@string/btn_login_title"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" android:id="@+id/btnLogin"/>

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_medium" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_new_user"
                        android:textSize="16sp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/blue_grey_300" />

                <TextView
                        android:id="@+id/btnLoginSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/tv_btn_sign_up"
                        android:layout_marginRight="3dp"
                        android:layout_marginLeft="3dp"
                        android:textSize="16sp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" android:focusable="true"/>

            </LinearLayout>

            <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xlarge" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>
</LinearLayout>