<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
android:layoutDirection="rtl">



    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/searchToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/et_search"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_search"
                        android:imeOptions="actionSearch"
                        android:maxLines="1"
                        android:singleLine="true">

                    <requestFocus/>

                </EditText>

                <ImageButton
                        android:id="@+id/bt_clear"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_close"
                        android:tint="@color/grey_80"
                        android:visibility="visible" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>


        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_10" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:scrollingCache="true" android:id="@+id/rvSearch"/>

        <LinearLayout
                android:id="@+id/lyt_no_result"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_no_result_found"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    android:textColor="@color/grey_40"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/tv_put_keyword"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_40"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/lyt_suggestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">


            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerSuggestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:cacheColorHint="#0000"
                    android:scrollbars="none"
                    android:scrollingCache="true" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/overlay_dark_20" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>